# rmath

./: Cargo.toml  Readme.md  build.rs
benches/: nat_bench.rs
examples/: bigint.rs  rand.rs
src/: lib.rs  parse_err.rs
src/bigint/: arith.rs  arith_amd64.rs  arith_generic.rs  bigint.rs  bigint_macro.rs  decimal.rs  float.rs  float_err.rs  float_fmt.rs  float_macro.rs  float_para.rs  mod.rs  nat.rs  nat_amd64.rs  nat_avx2.rs  nat_err.rs  nat_generic.rs  nat_macro.rs  rat.rs  rat_err.rs  util.rs
src/bigint/bigint/: tests.rs
src/bigint/nat/: tests.rs
src/bigint/rat/: test.rs
src/os/: mod.rs
src/os/linux/: mod.rs
src/os/linux/b32/: arm.rs  mips.rs  mod.rs  powerpc.rs  x86.rs
src/os/linux/b64/: aarch64.rs  mips64.rs  mod.rs  x86_64.rs
src/os/windows/: bcrypt.rs  minwindef.rs  mod.rs  ntstatus.rs  winnt.rs
src/rand/: crypto_rand.rs  crypto_rand_amd64.rs  default_rand.rs  default_rand_amd64.rs  default_seed.rs  default_seed_amd64.rs  iter.rs  lagged_fibonacci_rand.rs  linear_congruential_rand.rs  mersenne_twister_rand.rs  mod.rs  rand_error.rs
