[package]
name = "rmath"
version = "0.1.5"
authors = ["mengsuenyan <mengsuenyan@163.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A rust math library"
readme = "Readme.md"
repository = "https://github.com/mengsuenyan/rmath.git"
documentation = "https://docs.rs/rmath/0.1.5/rmath/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
